@@ -19,11 +19,11 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 class FatalTerminationCoordinatorTest {
-    private static final EngineLogger.Context CONTEXT =
-            new EngineLogger.Context(12L, 34L, "core", null, null);
+    private static final EngineLogger.Context CONTEXT = new EngineLogger.Context(12L, 34L, "core", null, null);
 
     @Test
     void happyPathLogsCleansReverseOrderVerifiesFlushesThenTerminates() {
+
         List<String> trace = new ArrayList<>();
         NativeResourceRegistry registry = new NativeResourceRegistry();
         ProbeSubsystem first = new ProbeSubsystem("first", registry, trace, 11L);
@@ -39,30 +39,18 @@ class FatalTerminationCoordinatorTest {
             throw signal;
         });
 
-        assertSame(
-                signal,
-                assertThrows(
-                        TerminationSignal.class,
-                        () -> fatal.terminate("fatal", CONTEXT, List.of(first, second), registry)));
+        assertSame(signal, assertThrows(TerminationSignal.class, () -> fatal.terminate("fatal", CONTEXT, List.of(first, second), registry)));
 
         assertEquals(
-                List.of(
-                        "log:FATAL:fatal",
-                        "second:stop",
-                        "second:close",
-                        "second:resource-close",
-                        "first:stop",
-                        "first:close",
-                        "first:resource-close",
-                        "flush",
-                        "terminate:1"),
-                trace);
+            List.of("log:FATAL:fatal", "second:stop", "second:close", "second:resource-close", "first:stop", "first:close", "first:resource-close", "flush", "terminate:1"), trace);
         assertEquals(1, first.resourceCloses.get());
         assertEquals(1, second.resourceCloses.get());
+
     }
 
     @Test
     void stopFailureStillClosesAndReportsBeforeFlushAndTermination() {
+
         List<String> trace = new ArrayList<>();
         List<EngineLogger.Event> events = new ArrayList<>();
         NativeResourceRegistry registry = new NativeResourceRegistry();
@@ -79,9 +67,7 @@ class FatalTerminationCoordinatorTest {
             throw signal;
         });
 
-        TerminationSignal actual = assertThrows(
-                TerminationSignal.class,
-                () -> fatal.terminate("fatal", CONTEXT, List.of(first, second), registry));
+        TerminationSignal actual = assertThrows(TerminationSignal.class, () -> fatal.terminate("fatal", CONTEXT, List.of(first, second), registry));
 
         assertSame(signal, actual);
         assertEquals(1, actual.getSuppressed().length);
@@ -92,18 +78,17 @@ class FatalTerminationCoordinatorTest {
         assertEquals(1, first.resourceCloses.get());
         assertEquals(1, second.resourceCloses.get());
 
-        EngineLogger.Event error = events.stream()
-                .filter(event -> event.level() == EngineLogger.Level.ERROR)
-                .findFirst()
-                .orElseThrow();
+        EngineLogger.Event error = events.stream().filter(event -> event.level() == EngineLogger.Level.ERROR).findFirst().orElseThrow();
         assertSame(CONTEXT, error.context());
         assertTrue(error.message().contains("1"));
         assertTrue(error.message().contains(second.stopFailure.getClass().getName()));
         assertTrue(error.message().contains("stop failed"));
+
     }
 
     @Test
     void closeFailureRemainsTrackedAndRegistryFailureAlsoReachesTerminator() {
+
         List<String> trace = new ArrayList<>();
         List<EngineLogger.Event> events = new ArrayList<>();
         NativeResourceRegistry registry = new NativeResourceRegistry();
@@ -120,9 +105,7 @@ class FatalTerminationCoordinatorTest {
             throw signal;
         });
 
-        TerminationSignal actual = assertThrows(
-                TerminationSignal.class,
-                () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
+        TerminationSignal actual = assertThrows(TerminationSignal.class, () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
 
         assertEquals(2, actual.getSuppressed().length);
         assertSame(releaseFailure, actual.getSuppressed()[0]);
@@ -130,16 +113,20 @@ class FatalTerminationCoordinatorTest {
         assertTrue(actual.getSuppressed()[1].getMessage().contains("CLOSE_FAILED"));
         assertEquals(2, events.stream().filter(event -> event.level() == EngineLogger.Level.ERROR).count());
         assertTrue(trace.indexOf("flush") < trace.indexOf("terminate:1"));
+
     }
 
     @Test
     void initialFatalWriteRuntimeExceptionAndErrorDoNotSkipCleanupOrTermination() {
+
         verifyInitialFatalWriteFailure(new IllegalStateException("fatal write runtime"));
         verifyInitialFatalWriteFailure(new AssertionError("fatal write error"));
+
     }
 
     @Test
     void errorReportingFailureIsCapturedOnceWithoutRecursiveRetry() {
+
         List<String> trace = new ArrayList<>();
         NativeResourceRegistry registry = new NativeResourceRegistry();
         ProbeSubsystem subsystem = new ProbeSubsystem("one", registry, trace, 3L);
@@ -152,16 +139,20 @@ class FatalTerminationCoordinatorTest {
         EngineLogger logger = new EngineLogger(new EngineLogger.Sink() {
             @Override
             public void write(EngineLogger.Event event) {
+
                 trace.add("log:" + event.level());
                 if (event.level() == EngineLogger.Level.ERROR) {
                     errorWrites.incrementAndGet();
                     throw reportFailure;
                 }
+
             }
 
             @Override
             public void flush() {
+
                 trace.add("flush");
+
             }
         });
         TerminationSignal signal = new TerminationSignal();
@@ -170,31 +161,35 @@ class FatalTerminationCoordinatorTest {
             throw signal;
         });
 
-        TerminationSignal actual = assertThrows(
-                TerminationSignal.class,
-                () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
+        TerminationSignal actual = assertThrows(TerminationSignal.class, () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
 
         assertEquals(1, errorWrites.get());
         assertEquals(2, actual.getSuppressed().length);
         assertSame(subsystem.stopFailure, actual.getSuppressed()[0]);
         assertSame(reportFailure, actual.getSuppressed()[1]);
         assertTrue(trace.indexOf("flush") < trace.indexOf("terminate:1"));
+
     }
 
     @Test
     void flushRuntimeExceptionAndErrorDoNotPreventTermination() {
+
         verifyFlushFailure(new IllegalStateException("flush runtime"));
         verifyFlushFailure(new AssertionError("flush error"));
+
     }
 
     @Test
     void terminatorRuntimeExceptionAndErrorPropagateByIdentityWithPriorFailuresSuppressed() {
+
         verifyTerminatorFailure(new IllegalStateException("terminate runtime"));
         verifyTerminatorFailure(new AssertionError("terminate error"));
+
     }
 
     @Test
     void returningTerminatorIsTerminalAndCarriesPriorFailures() {
+
         List<String> trace = new ArrayList<>();
         NativeResourceRegistry registry = new NativeResourceRegistry();
         ProbeSubsystem subsystem = new ProbeSubsystem("one", registry, trace, 4L);
@@ -207,50 +202,44 @@ class FatalTerminationCoordinatorTest {
             terminations.incrementAndGet();
         });
 
-        IllegalStateException returned = assertThrows(
-                IllegalStateException.class,
-                () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
+        IllegalStateException returned = assertThrows(IllegalStateException.class, () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
 
         assertTrue(returned.getMessage().contains("returned normally"));
         assertEquals(1, returned.getSuppressed().length);
         assertSame(subsystem.stopFailure, returned.getSuppressed()[0]);
         int traceSize = trace.size();
 
-        assertThrows(
-                IllegalStateException.class,
-                () -> fatal.terminate("again", CONTEXT, List.of(subsystem), registry));
+        assertThrows(IllegalStateException.class, () -> fatal.terminate("again", CONTEXT, List.of(subsystem), registry));
         assertEquals(traceSize, trace.size());
         assertEquals(1, terminations.get());
+
     }
 
     @Test
     void invalidInputsAndDuplicateSubsystemsFailBeforeAnySideEffect() {
+
         List<String> trace = new ArrayList<>();
         NativeResourceRegistry registry = new NativeResourceRegistry();
         ProbeSubsystem subsystem = new ProbeSubsystem("one", registry, trace, 5L);
         AtomicInteger terminations = new AtomicInteger();
-        FatalTerminationCoordinator fatal = new FatalTerminationCoordinator(
-                new EngineLogger(new TraceSink(trace)),
-                status -> terminations.incrementAndGet());
+        FatalTerminationCoordinator fatal = new FatalTerminationCoordinator(new EngineLogger(new TraceSink(trace)), status -> terminations.incrementAndGet());
 
         assertThrows(NullPointerException.class, () -> fatal.terminate(null, CONTEXT, List.of(), registry));
         assertThrows(IllegalArgumentException.class, () -> fatal.terminate("   ", CONTEXT, List.of(), registry));
         assertThrows(NullPointerException.class, () -> fatal.terminate("fatal", null, List.of(), registry));
         assertThrows(NullPointerException.class, () -> fatal.terminate("fatal", CONTEXT, null, registry));
-        assertThrows(
-                NullPointerException.class,
-                () -> fatal.terminate("fatal", CONTEXT, Arrays.asList(subsystem, null), registry));
-        assertThrows(
-                IllegalArgumentException.class,
-                () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem, subsystem), registry));
+        assertThrows(NullPointerException.class, () -> fatal.terminate("fatal", CONTEXT, Arrays.asList(subsystem, null), registry));
+        assertThrows(IllegalArgumentException.class, () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem, subsystem), registry));
         assertThrows(NullPointerException.class, () -> fatal.terminate("fatal", CONTEXT, List.of(), null));
 
         assertEquals(List.of(), trace);
         assertEquals(0, terminations.get());
+
     }
 
     @Test
     void reentrantAndLaterCallsCannotDuplicateCleanupOrTermination() {
+
         List<String> trace = new ArrayList<>();
         NativeResourceRegistry registry = new NativeResourceRegistry();
         EngineLogger logger = new EngineLogger(new TraceSink(trace));
@@ -258,9 +247,8 @@ class FatalTerminationCoordinatorTest {
         AtomicReference<Throwable> nestedFailure = new AtomicReference<>();
         AtomicInteger terminations = new AtomicInteger();
         ProbeSubsystem subsystem = new ProbeSubsystem("one", registry, trace, 6L);
-        subsystem.onStopCallback = () -> nestedFailure.set(assertThrows(
-                IllegalStateException.class,
-                () -> fatalRef.get().terminate("nested", CONTEXT, List.of(subsystem), registry)));
+        subsystem.onStopCallback = () -> nestedFailure
+            .set(assertThrows(IllegalStateException.class, () -> fatalRef.get().terminate("nested", CONTEXT, List.of(subsystem), registry)));
         start(subsystem);
         trace.clear();
 
@@ -270,23 +258,21 @@ class FatalTerminationCoordinatorTest {
         });
         fatalRef.set(fatal);
 
-        assertThrows(
-                TerminationSignal.class,
-                () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
+        assertThrows(TerminationSignal.class, () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
         int traceSize = trace.size();
 
         assertTrue(nestedFailure.get() instanceof IllegalStateException);
         assertEquals(1, trace.stream().filter("one:stop"::equals).count());
         assertEquals(1, trace.stream().filter("one:close"::equals).count());
-        assertThrows(
-                IllegalStateException.class,
-                () -> fatal.terminate("later", CONTEXT, List.of(subsystem), registry));
+        assertThrows(IllegalStateException.class, () -> fatal.terminate("later", CONTEXT, List.of(subsystem), registry));
         assertEquals(traceSize, trace.size());
         assertEquals(1, terminations.get());
+
     }
 
     @Test
     void concurrentSecondCallIsRejectedWhileFirstOwnsFatalSequence() throws Exception {
+
         NativeResourceRegistry registry = new NativeResourceRegistry();
         CountDownLatch fatalWriteEntered = new CountDownLatch(1);
         CountDownLatch releaseFatalWrite = new CountDownLatch(1);
@@ -312,36 +298,23 @@ class FatalTerminationCoordinatorTest {
         });
         assertTrue(fatalWriteEntered.await(5, TimeUnit.SECONDS));
 
-        assertThrows(
-                IllegalStateException.class,
-                () -> fatal.terminate("second", CONTEXT, List.of(), registry));
+        assertThrows(IllegalStateException.class, () -> fatal.terminate("second", CONTEXT, List.of(), registry));
         releaseFatalWrite.countDown();
         first.join(5_000L);
 
         assertTrue(firstResult.get() instanceof TerminationSignal);
         assertEquals(1, terminations.get());
+
     }
 
     @Test
     void publicConstructorExitsChildJvmOnlyAfterResourceCleanupAndFlush(@TempDir Path tempDir) throws Exception {
+
         Path marker = tempDir.resolve("fatal-order.txt");
-        String javaExecutable = Path.of(
-                        System.getProperty("java.home"),
-                        "bin",
-                        isWindows() ? "java.exe" : "java")
-                .toString();
-        String childClasspath = String.join(
-                File.pathSeparator,
-                codeSourcePath(FatalTerminationCoordinatorChildProcess.class),
-                codeSourcePath(FatalTerminationCoordinator.class));
-        Process process = new ProcessBuilder(
-                        javaExecutable,
-                        "-cp",
-                        childClasspath,
-                        FatalTerminationCoordinatorChildProcess.class.getName(),
-                        marker.toString())
-                .redirectErrorStream(true)
-                .start();
+        String javaExecutable = Path.of(System.getProperty("java.home"), "bin", isWindows() ? "java.exe" : "java").toString();
+        String childClasspath = String.join(File.pathSeparator, codeSourcePath(FatalTerminationCoordinatorChildProcess.class), codeSourcePath(FatalTerminationCoordinator.class));
+        Process process = new ProcessBuilder(javaExecutable, "-cp", childClasspath, FatalTerminationCoordinatorChildProcess.class.getName(), marker.toString())
+            .redirectErrorStream(true).start();
 
         boolean finished = process.waitFor(15, TimeUnit.SECONDS);
         if (!finished) {
@@ -350,16 +323,18 @@ class FatalTerminationCoordinatorTest {
 
         assertTrue(finished, "child JVM must terminate within the bounded timeout");
         assertEquals(1, process.exitValue());
-        assertEquals(
-                List.of("fatal", "stop", "close", "resource-close", "flush"),
-                Files.readAllLines(marker));
+        assertEquals(List.of("fatal", "stop", "close", "resource-close", "flush"), Files.readAllLines(marker));
+
     }
 
     private static String codeSourcePath(Class<?> type) throws Exception {
+
         return Path.of(type.getProtectionDomain().getCodeSource().getLocation().toURI()).toString();
+
     }
 
     private static void verifyInitialFatalWriteFailure(Throwable failure) {
+
         List<String> trace = new ArrayList<>();
         NativeResourceRegistry registry = new NativeResourceRegistry();
         ProbeSubsystem subsystem = new ProbeSubsystem("one", registry, trace, 31L);
@@ -369,15 +344,19 @@ class FatalTerminationCoordinatorTest {
         EngineLogger logger = new EngineLogger(new EngineLogger.Sink() {
             @Override
             public void write(EngineLogger.Event event) {
+
                 trace.add("log:" + event.level());
                 if (writes.getAndIncrement() == 0) {
                     throwUnchecked(failure);
                 }
+
             }
 
             @Override
             public void flush() {
+
                 trace.add("flush");
+
             }
         });
         TerminationSignal signal = new TerminationSignal();
@@ -387,26 +366,29 @@ class FatalTerminationCoordinatorTest {
             throw signal;
         });
 
-        TerminationSignal actual = assertThrows(
-                TerminationSignal.class,
-                () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
+        TerminationSignal actual = assertThrows(TerminationSignal.class, () -> fatal.terminate("fatal", CONTEXT, List.of(subsystem), registry));
 
         assertSame(failure, actual.getSuppressed()[0]);
         assertEquals(2, writes.get());
         assertTrue(trace.contains("one:close"));
         assertTrue(trace.indexOf("flush") < trace.indexOf("terminate:1"));
+
     }
 
     private static void verifyFlushFailure(Throwable failure) {
+
         NativeResourceRegistry registry = new NativeResourceRegistry();
         EngineLogger logger = new EngineLogger(new EngineLogger.Sink() {
             @Override
             public void write(EngineLogger.Event event) {
+
             }
 
             @Override
             public void flush() {
+
                 throwUnchecked(failure);
+
             }
         });
         TerminationSignal signal = new TerminationSignal();
@@ -415,15 +397,15 @@ class FatalTerminationCoordinatorTest {
             throw signal;
         });
 
-        TerminationSignal actual = assertThrows(
-                TerminationSignal.class,
-                () -> fatal.terminate("fatal", CONTEXT, List.of(), registry));
+        TerminationSignal actual = assertThrows(TerminationSignal.class, () -> fatal.terminate("fatal", CONTEXT, List.of(), registry));
 
         assertEquals(1, actual.getSuppressed().length);
         assertSame(failure, actual.getSuppressed()[0]);
+
     }
 
     private static void verifyTerminatorFailure(Throwable terminationFailure) {
+
         NativeResourceRegistry registry = new NativeResourceRegistry();
         RuntimeException earlier = new IllegalStateException("fatal write failed");
         EngineLogger logger = new EngineLogger(event -> {
@@ -435,28 +417,28 @@ class FatalTerminationCoordinatorTest {
 
         Throwable actual;
         if (terminationFailure instanceof Error) {
-            actual = assertThrows(
-                    Error.class,
-                    () -> fatal.terminate("fatal", CONTEXT, List.of(), registry));
+            actual = assertThrows(Error.class, () -> fatal.terminate("fatal", CONTEXT, List.of(), registry));
         } else {
-            actual = assertThrows(
-                    RuntimeException.class,
-                    () -> fatal.terminate("fatal", CONTEXT, List.of(), registry));
+            actual = assertThrows(RuntimeException.class, () -> fatal.terminate("fatal", CONTEXT, List.of(), registry));
         }
 
         assertSame(terminationFailure, actual);
         assertEquals(1, actual.getSuppressed().length);
         assertSame(earlier, actual.getSuppressed()[0]);
+
     }
 
     private static void start(ProbeSubsystem... subsystems) {
+
         for (ProbeSubsystem subsystem : subsystems) {
             subsystem.initialize();
             subsystem.start();
         }
+
     }
 
     private static void await(CountDownLatch latch) {
+
         try {
             if (!latch.await(5, TimeUnit.SECONDS)) {
                 throw new IllegalStateException("test latch timed out");
@@ -465,34 +447,45 @@ class FatalTerminationCoordinatorTest {
             Thread.currentThread().interrupt();
             throw new IllegalStateException(interrupted);
         }
+
     }
 
     private static void throwUnchecked(Throwable failure) {
+
         if (failure instanceof RuntimeException runtime) {
             throw runtime;
         }
         throw (Error) failure;
+
     }
 
     private static boolean isWindows() {
+
         return System.getProperty("os.name").toLowerCase().contains("win");
+
     }
 
     private static class TraceSink implements EngineLogger.Sink {
         protected final List<String> trace;
 
         TraceSink(List<String> trace) {
+
             this.trace = trace;
+
         }
 
         @Override
         public void write(EngineLogger.Event event) {
+
             trace.add("log:" + event.level() + ":" + event.message());
+
         }
 
         @Override
         public void flush() {
+
             trace.add("flush");
+
         }
     }
 
@@ -500,14 +493,18 @@ class FatalTerminationCoordinatorTest {
         private final List<EngineLogger.Event> events;
 
         CapturingSink(List<EngineLogger.Event> events, List<String> trace) {
+
             super(trace);
             this.events = events;
+
         }
 
         @Override
         public void write(EngineLogger.Event event) {
+
             events.add(event);
             super.write(event);
+
         }
     }
 
@@ -523,14 +520,17 @@ class FatalTerminationCoordinatorTest {
         private Runnable onStopCallback;
 
         ProbeSubsystem(String name, NativeResourceRegistry registry, List<String> trace, long handle) {
+
             this.name = name;
             this.registry = registry;
             this.trace = trace;
             this.handle = handle;
+
         }
 
         @Override
         protected void onInitialize() {
+
             resource = registry.register(name, handle, () -> {
                 trace.add(name + ":resource-close");
                 resourceCloses.incrementAndGet();
@@ -538,14 +538,17 @@ class FatalTerminationCoordinatorTest {
                     throwUnchecked(resourceCloseFailure);
                 }
             });
+
         }
 
         @Override
         protected void onStart() {
+
         }
 
         @Override
         protected void onStop() {
+
             trace.add(name + ":stop");
             if (onStopCallback != null) {
                 onStopCallback.run();
@@ -553,12 +556,15 @@ class FatalTerminationCoordinatorTest {
             if (stopFailure != null) {
                 throwUnchecked(stopFailure);
             }
+
         }
 
         @Override
         protected void onClose() {
+
             trace.add(name + ":close");
             resource.close();
+
         }
     }
 
